--- a/index.html
+++ b/index.html
@@ -74,34 +74,34 @@
                 <h2>Trending now near you</h2>
                 <div class="cards-container">
                     <div class="card">
-                        <img src="card2img.jpeg" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the played...</p>
+                        <img src="mera mann.jpg" class="card-img">
+                        <p class="card-title">Mera mann kahne laga</p>
+                        <p class="card-info">Mera Mann Kehne Laga sung by Falak Shabir.</p>
                     </div>              
                     <div class="card">
                         <img src="card3img.jpeg" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the played...</p>
+                        <p class="card-title">Mere Paas Tum Ho</p>
+                        <p class="card-info">Mere Paas Tum Ho is sung by Rahat Fateh Ali Khan</p>
                     </div>                             
                     <div class="card">
-                        <img src="card4img.jpeg" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the played...</p>
+                        <img src="Sohnea.jpg" class="card-img">
+                        <p class="card-title">Sohnea</p>
+                        <p class="card-info">Sohnea Song by Miss Pooja</p>
                     </div>
                     <div class="card">
-                        <img src="card3img.jpeg" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the played...</p>
+                        <img src="Khaab.jpg" class="card-img">
+                        <p class="card-title">Khaab</p>
+                        <p class="card-info">Khaab Song by Akhil</p>
                     </div>
                     <div class="card">
-                        <img src="card2img.jpeg" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the played...</p>
+                        <img src="duniya.jpg" class="card-img">
+                        <p class="card-title">Duniyaa</p>
+                        <p class="card-info">Duniyaa Song by Akhil and Dhvani Bhanushali</p>
                     </div>
                     <div class="card">
-                        <img src="card4img.jpeg" class="card-img">
-                        <p class="card-title">Top 50 - Global</p>
-                        <p class="card-info">Your daily updates of the played...</p>
+                        <img src="rab.jpeg" class="card-img">
+                        <p class="card-title">Tujh Mein Rab Dikhta Hain</p>
+                        <p class="card-info">Tujh Mein Rab Dikhta Hain Song by Roopkumar Rathod</p>
                     </div>
             </div>
             <h2>Featured Charts</h2>
