--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <div class="badge badge2 hide size">Explore premium</div>
                     <div class="badge badge2 badge3"><i class="fa-regular fa-circle-down"></i>Install app</div>
                     <i class="fa-regular fa-user"></i>
+
                 </div>               
             </div>
 
@@ -162,5 +163,6 @@
             </div>
         </div>
     </div>
+<script src="app.js"></script>
 </body>
 </html>
